--- a/contrib/site.conf.template
+++ b/contrib/site.conf.template
@@ -3,12 +3,18 @@ server {
     listen 8080;
     server_name $SERVER_NAME;
 
-    # rewrite http to https (ALB does the https termination)
-    if ($http_x_forwarded_proto != 'https') {
-      return 301 https://$server_name$request_uri;
+    # return a 200 for the ALB to report as healthy
+    location = /health {
+      return 200;
+      access_log off;
     }
 
     location / {
+
+      # rewrite http to https (ALB does the https termination)
+      if ($http_x_forwarded_proto != 'https') {
+        return 301 https://$server_name$request_uri;
+      }
 
       proxy_set_header  Host $host;
       proxy_set_header  X-Real-IP $remote_addr;
